--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react-dom": "^15.6.1",
     "react-materialize": "^1.0.10",
     "react-redux": "^5.0.6",
+    "react-router-dom": "^4.2.2",
     "react-router-redux": "^5.0.0-alpha.6",
     "react-scripts": "1.0.11",
     "redux": "^3.7.2",
